force-app/main/default/objects/REIntegrationEndpoints__c/REIntegrationEndpoints__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store Integration End Point</description>
    <label>RE Integration Endpoints</label>
</CustomObject>