force-app/main/default/objects/REIntegrationEndpoints__c/fields/Account_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_API_Key__c</fullName>
    <description>This field is used to capture the account API key</description>
    <label>Account API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>