force-app/main/default/objects/REIntegrationEndpoints__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Captures the Client Id</description>
    <label>Client Id</label>
    <type>TextArea</type>
</CustomField>