force-app/main/default/objects/REIntegrationEndpoints__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>This field is used to capture the Client Secret</description>
    <label>Client Secret</label>
    <type>TextArea</type>
</CustomField>