force-app/main/default/objects/REIntegrationEndpoints__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>This field is used to capture the content type</description>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>