force-app/main/default/objects/REIntegrationEndpoints__c/fields/Endpoint_URI__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URI__c</fullName>
    <description>This field is used to capture the End Point URI</description>
    <label>Endpoint URI</label>
    <type>Url</type>
</CustomField>