force-app/main/default/objects/REIntegrationEndpoints__c/fields/FromPhone__c.field-meta.xml
<CustomField>
    <fullName>FromPhone__c</fullName>
    <label>From Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>