force-app/main/default/objects/REIntegrationEndpoints__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>This field is used to capture the header of the request</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>