force-app/main/default/objects/REIntegrationEndpoints__c/fields/Http_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Http_Method_Type__c</fullName>
    <description>This field is used to capture the request type</description>
    <label>Http Method Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>