force-app/main/default/objects/REIntegrationEndpoints__c/fields/Is_Cert_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Cert_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if certificate is required or not for the callout</description>
    <label>Is Cert Required</label>
    <type>Checkbox</type>
</CustomField>