force-app/main/default/objects/REIntegrationEndpoints__c/fields/Is_Mock_Response_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Mock_Response_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if mock response in enabled for the call out or not</description>
    <label>Is Mock Response Enabled</label>
    <type>Checkbox</type>
</CustomField>