force-app/main/default/objects/REIntegrationEndpoints__c/fields/isServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>isServiceAvailable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is Service Available</label>
    <type>Checkbox</type>
</CustomField>