force-app/main/default/objects/REIntegrationEndpoints__c/fields/Mock_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response_Code__c</fullName>
    <description>This field is used to store the mock response code.</description>
    <label>Mock Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>