force-app/main/default/objects/REIntegrationEndpoints__c/fields/Mock_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response_JSON__c</fullName>
    <description>This field is used to store the mock JSON</description>
    <label>Mock Response JSON</label>
    <type>TextArea</type>
</CustomField>