force-app/main/default/objects/REIntegrationEndpoints__c/fields/Resource_URI__c.field-meta.xml
<CustomField>
    <fullName>Resource_URI__c</fullName>
    <description>This field is used to capture the URI of the resource</description>
    <label>Resource URI</label>
    <type>Url</type>
</CustomField>