force-app/main/default/objects/REIntegrationEndpoints__c/fields/TimeOut__c.field-meta.xml
<CustomField>
    <fullName>TimeOut__c</fullName>
    <label>Time Out</label>
    <length>10</length>
    <type>Text</type>
</CustomField>