force-app/main/default/objects/REIntegrationEndpoints__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>This field is used to capture the Username</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>