force-app/main/default/objects/REIntegrationEndpoints__c/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <label>Workspace Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>